rust/crates/rax/src/text/rules/snapshots/rax__string__rules__until_not_in_char_set__tests__ascii_all_in_set.snap
---
source: crates/rax/src/string/rules/until_not_in_char_set.rs
expression: result
---
Ok(
    (
        "123456",
        "",
    ),
)
